fix: high contrast menu icons fix (#2053)
This fix a regression on #1944.

Basically, make the icon buttons white-ish when high contrast theme is on.
Additionally, fix the contextual menu callout container border in high contrast theme.

**Notes**
- I'm abandoning #2047 in favor of this PR
- The way this buttons are implemented is inconsistent (2 buttons with contextual menu, 2 different ways of implementing them). This different approaches made it harder than it should be to convert the components to use CSS-Modules properly and I left that refactor out of the scope of this PR as it will take more time and we want to release Office Fabric 7 update to prod as soon as we can.

* fix header icon colors
* fix contextual menu borders in high contrast theme

--- a/src/common/components/gear-options-button-component.scss
+++ b/src/common/components/gear-options-button-component.scss
@@ -28,4 +28,8 @@
         margin-right: 5px;
         margin-top: 10px;
     }
+
+    button {
+        color: $neutral-alpha-90;
+    }
 }
